# lausch

./: .gitignore  README.md  build.py  lausch.spec  main.py  poc_system_integration.py  pyproject.toml
docs/: agent_roles.md  learnings.md
installer/: lausch_setup.iss
lausch/: __init__.py  __main__.py  autostart.py  config.py  logging_setup.py  main.py  settings.py
lausch/audio/: __init__.py  recorder.py
lausch/input/: __init__.py  text_inserter.py
lausch/transcription/: __init__.py  transcriber.py
lausch/ui/: __init__.py  overlay.py  settings_window.py  tray.py  visualizer.py
scripts/: build.py
src/: audio_recorder.py  text_inserter.py  transcriber.py
src/ui/: overlay.py  test_audio_generator.py
tests/: conftest.py  test_overlay.py
tests/fixtures/: generate_test_audio.py
