[project]
name = "lausch"
version = "0.1.0"
description = "Local speech-to-text dictation app"
requires-python = ">=3.10"
dependencies = [
    "PyQt6",
    "faster-whisper",
    "sounddevice",
    "numpy",
    "keyboard",
    "pyperclip",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-qt",
    "pyinstaller",
]

[project.scripts]
lausch = "lausch.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["lausch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
